--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,7 @@ flutter:
   uses-material-design: true
 
   assets:
-  - img/try.png
-  - img/ballon.png
-  - img/kaktus.png
-  - img/hijau.png
-  - img/stisla.png
+   - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -95,5 +91,13 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: assets/static/Raleway-Black.ttf
+        - asset: assets/static/Raleway-Light.ttf
+        - asset: assets/static/Raleway-Medium.ttf
+        - asset: assets/static/Raleway-Italic.ttf
+        - asset: assets/static/Raleway-SemiBold.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
